package Assignment3;

    public class Main {

        public static void main(String [] args){

        }

        static int countLampsInBuilding(){

        }

        static int countWindowsInBuilding(){

        }

        static boolean isNormal(){

        }

        /*

        3.a Lav en klasse Room med følgende private felter:
        numberOfLamps
        numberOfWindows

        3.b Lav en konstruktør der tager begge felter som parametre
        og tildeler dem værdier.

        3.c Lav getters og setters for alle felter i Room.

        3.d Lav en klasse Building med følgende private felter:
        rooms — en ArrayList<Room> der kan holde flere Room objekter
        numberOfFloors

        3.e Lav en konstruktør der tager begge felter som parametre
        og tildeler dem værdier.

        3.f Lav getters og setters for alle felter i Building.

        3.g Lav en klasse Main med en main-metode. Opret mindst tre forskellige Room objekter.

        3.h Tilføj de tre rum til en ArrayList<Room>.

        3.i Opret et Building objekt med listen af rum fra 3.h.

        3.j Lav tre static metoder i Main:
        countLampsInBuilding(Building building) — returnerer det samlede antal lamper i bygningen
        countWindowsInBuilding(Building building) — returnerer det samlede antal vinduer
        countRoomsInBuilding(Building building) — returnerer det samlede antal rum

        Alle tre metoder skal bruge et loop der går igennem hvert rum i bygningen.

        3.k Lav en static metode isNormal(Building building) der returnerer true
        hvis bygningens antal etager er mindre end eller lig med antal rum — ellers false.
        Test metoden med både en normal og en unormal bygning.
                 */
    }
